MDEV-24301 [Warning] Aborted connection (This connection closed normally)

Warning on a normal graceful disconnnect is excessive, so lets not do
it.

MDEV-19282 restructed the code from 10.3 so applying this as a 10.4+
fix.